fixed text alignmnt issues

--- a/assets/sass/_elements.sass
+++ b/assets/sass/_elements.sass
@@ -109,7 +109,7 @@ article
     margin: 1em auto
     display: grid
     grid-gap: 20px
-    grid-template-columns: 1fr 1fr
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr))
     grid-auto-rows: 250px
     @media screen and (max-width: 736px)
         grid-template-columns: repeat(auto-fit, minmax(100%, 1fr))
