--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -87,7 +87,7 @@ nav
     display: flex
     flex-direction: column
     justify-content: center
-    align-items: centerx
+    align-items: center
 
 .bottom-menu
     display: flex
